# school-management-software

./: .env.production  .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  school.db  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
__tests__/: auth-context.test.tsx  billing-calc.test.ts  dashboard-calc.test.ts  demo-data.test.ts  grades.test.ts  live-data.test.tsx  permissions.test.ts  school-data.test.ts
__tests__/components/: parents-page.test.tsx  students-new.test.tsx
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/billing/: page.tsx
app/classes/: page.tsx
app/dashboard/: DashboardCharts.tsx  page.tsx
app/parents/: page.tsx
app/reports/: ReportActions.tsx  page.tsx
app/results/: page.tsx
app/settings/: SettingsForm.tsx
app/setup/: page.tsx
components/: Pagination.tsx  RoleGuard.tsx
components/layout/: NotificationPanel.tsx  Sidebar.tsx  SyncStatusBar.tsx
lib/: api.ts  auth-context.tsx  auth.ts  demo-data.ts  grades.ts  live-data.tsx  notifications-context.tsx  pdf.ts  permissions.ts  prisma.ts  school-data.ts  tauri.ts  utils.ts
migration/: MIGRATION.md  migrate.sh  next.config.ts
migration/app/: layout.tsx
migration/lib/: auth-context.tsx  tauri.ts
migration/src-tauri/: Cargo.toml  tauri.conf.json
prisma/: schema.prisma  seed.js
scripts/: prepare-tauri.js
src-tauri/: Cargo.toml  school.db  tauri.conf.json
src-tauri/server/: index.js
src-tauri/src/: auth.rs  commands.rs  db.rs  http_server.rs  lib.rs  models.rs  sync.rs  tests.rs
supabase/: README.md
(+95 files in other folders)
